fixed background for IOS, because background-attachment fixed, doesn't work on any IOS operating system, and scale and expand the picture...also on mobiles as well as ipad

--- a/src/Components/WelcomeSection/WelcomeSection.styles.scss
+++ b/src/Components/WelcomeSection/WelcomeSection.styles.scss
@@ -1,3 +1,31 @@
+.main-wrapper-forIOS {
+  height: 100vh;
+  width: 100vw;
+  background: url(../../assets/ari.webp) no-repeat 
+    center center; 
+  background-attachment: scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    font-family: Solar Vesta Serif;
+    text-align: center;
+    font-weight: 400;
+    font-size: 100px;
+    color: transparent;
+    letter-spacing: 120px;
+    text-indent: 120px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: white;
+    z-index: 0;
+  }
+}
+
 .main-wrapper {
   height: 100vh;
   width: 100vw;
@@ -27,7 +55,7 @@
 }
 
 @media screen and (max-width: 2620px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     text-indent: 90px;
     letter-spacing: 90px;
     font-size: 95px;
@@ -35,7 +63,7 @@
 }
 
 @media screen and (max-width: 2150px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     text-indent: 70px;
     letter-spacing: 70px;
     font-size: 90px;
@@ -43,7 +71,7 @@
 }
 
 @media screen and (max-width: 1816px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     text-indent: 60px;
     letter-spacing: 60px;
     font-size: 80px;
@@ -51,7 +79,7 @@
 }
 
 @media screen and (max-width: 1583px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     text-indent: 55px;
     letter-spacing: 55px;
     font-size: 71px;
@@ -59,7 +87,7 @@
 }
 
 @media screen and (max-width: 1430px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     letter-spacing: 40px;
     text-indent: 40px;
     margin: 0 24px;
@@ -67,14 +95,14 @@
 }
 
 @media screen and (max-width: 1270px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     letter-spacing: 30px;
     text-indent: 30px;
   }
 }
 
 @media screen and (max-width: 1128px) {
-  .main-wrapper{
+  .main-wrapper, .main-wrapper-forIOS {
     h1 {
       letter-spacing: 20px;
       text-indent: 20px;
@@ -83,14 +111,14 @@
 }
 
 @media screen and (max-width: 990px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     text-indent: 10px;
     letter-spacing: 10px;
   }
 }
 
 @media screen and (max-width: 847px) {
-  .main-wrapper > h1 {
+  .main-wrapper, .main-wrapper-forIOS > h1 {
     text-indent: 10px;
     letter-spacing: 10px;
     line-height: 90px;
@@ -98,9 +126,7 @@
 }
 
 @media screen and (max-width: 450px) {
-  .main-wrapper {
-    background-attachment: scroll;
-
+  .main-wrapper, .main-wrapper-forIOS {
     h1 {
       font-size: 45px;
       text-indent: 15px;
